# client

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  rust.yml
cli/: Cargo.toml  schema.graphql  user_query.graphql
cli/src/: main.rs  user_query.rs
client/: Cargo.toml  sqlx-data.json
client/migrations/: 20211011180137_init.sql
client/src/: actor.rs  application.rs  challenge.rs  database.rs  error.rs  lib.rs  node.rs  seal.rs  server.rs  util.rs
client/src/actor/: user.rs
client/src/database/: indexed_db.rs  sqlite.rs
client/src/database/sqlite/: server.rs
client/src/graphql/: mod.rs  mutations.rs  queries.rs
client/src/models/: error.rs  mod.rs  scalars.rs  user.rs
other/graphql/: mutations.graphql  queries.graphql  schema.graphql
other/graphql/mutations/: authenticate.graphql  signup.graphql
other/graphql/queries/: get_challenge.graphql
other/scripts/: gen_master_key.py  gen_stretched_master_key.py
other/test_keys/: test_key_encrypted.asc
scripts/: gen_stretched_master_key.py
src/: main.rs
src/models/: errors.rs  mod.rs  user.rs
