[package]
name = "azuma_client"
version = "0.1.0"
edition = "2018"
authors = [
    "Erik1000 <erik1000@protonmail.com>",
    "cloudybyte <hi@cloudybyte.net>",
    "okrplay <32576280+okrplay@users.noreply.github.com>"
]
license = "AGPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.14"
env_logger = "0.8.4"
# sodiumoxide = "0.2.7"
# keyring = "0.10.1"
rpassword = "5.0"