[package]
name = "minkan-client"
version = "0.1.0"
edition = "2018"
authors = [
    "Erik Tesar <erik@erik-tesar.com>"
    "cloudybyte <hi@cloudybyte.net>",
]
license = "AGPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.14"
env_logger = "0.8.4"
rpassword = "5.0"
sequoia-openpgp = "1.3.0"
thiserror = "1.0"
pbkdf2 = "0.8"
hkdf = "0.11"
sha2 = "0.9.5"
hmac = "0.11.0"
sqlx = { version = "0.5.5", features = ["runtime-async-std-native-tls","sqlite"]}
directories-next = "2"
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-std = { version = "1.6", features = [ "attributes" ] }
serde = { version = "1.0", features = ["derive"] }
[dev-dependencies]
base64 = "0.13"
