[package]
name = "minkan-cli"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
env_logger = "0.8.4"
rpassword = "5.0"
tokio = { version = "1.10.0", features = ["full"] }
minkan-client = { path = "../client" }
graphql_client = { version = "0.10", features = ["reqwest-blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
bytes = { version = "1.0.1", features = ["serde"] }
reqwest = "0.11.4"
serde_cbor = "0.10"