[package]
name = "minkan-client"
version = "0.1.0"
edition = "2021"
authors = [
    "Erik Tesar <erik@erik-tesar.com>"
]
license = "AGPL-3.0-or-later"
keywords = ["openpgp", "encryption", "e2ee"]
categories = []

readme = "README.md"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.11.5"}
async-trait = "0.1.51"
thiserror = "1.0.29"
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"]}
url = "2.2.2"
async-stream = "0.3.2"
futures = "0.3"

[dev-dependencies]
# used to test async code
tokio-test = "0.4.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.5.9", features = ["sqlite", "runtime-tokio-native-tls"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.55"
web-sys = { version = "0.3.55", features = ["Window", "IdbFactory" , "IdbOpenDbRequest"] }